--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -35,6 +35,7 @@
 	% \acro{OData}{Open Data Protocol}
 	\acro{rest}[REST]{Representational State Transfer}
 	\acro{s3}[S3]{Simple Storage Service}
+	\acro{saml}[SAML]{Security Assertion Markup Language}
 	\acro{sdk}[SDK]{Software Development Kit}
 	% \acro{SEO}{Search Engine Optimization}
 	\acro{sql}[SQL]{Structured Query Language}
