described method CreateTerraformStateBucket

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -10,6 +10,7 @@
 	% \acro{ANSI}{American National Standards Institute}
 	\acro{api}[API]{Application Programming Interface}
 	% \acro{AR}{Augmented Reality}
+	\acro{arn}[ARN]{Amazon Resource Name}
 	\acro{aws}[AWS]{Amazon Web Services}
 	% \acro{BAPI}{Business Application Programming Interface}
 	% \acro{BIOS}{Basic Input Output System}
@@ -27,6 +28,7 @@
 	% \acro{HTTPS}{Hypertext Transfer Protocol Secure}
 	\acro{iaas}[IaaS]{Infrastructure as a Service}
 	\acro{iac}[IaC]{Infrastructure as Code}
+	\acro{iam}[IAM]{Identity and Access Management}
 	% \acro{IP}{Internet Protocol}
 	% \acro{ISBN}{Internationale Standardbuchnummer}
 	% \acrodefplural{ISBN}[ISBNs]{Internationale Standardbuchnummern}
@@ -40,6 +42,7 @@
 	% \acro{SEO}{Search Engine Optimization}
 	\acro{sql}[SQL]{Structured Query Language}
 	% \acro{SSH}{Secure Shell}
+	\acro{sts}[STS]{Security Token Service}
 	% \acro{UEFI}{Unified Extensible Firmware Interface}
 	% \acro{URI}{Uniform Resource Identifier}
 	\acro{url}[URL]{Uniform Resource Locator}
