rearranged structure and started writing on future work

--- a/Inhalt/04_Inhalt/0100_introduction.tex
+++ b/Inhalt/04_Inhalt/0100_introduction.tex
@@ -25,6 +25,6 @@ Although, some conceptional thoughts have to be put into the appropriate choice 
 As an orientation for the bootstrapping procedure, an existing Python script will be leveraged.
 This script is checked for possible improvements and modernization potential.
 The newly developed procedure is then implemented as a general proof of concept.
-After this, unit tests will be established to prospectively ensure the structural integrity of the developed solution.
+\todo{adapt this to the actual implementation chapter}After this, unit tests will be established to prospectively ensure the structural integrity of the developed solution.
 Then, the solution has to be integrated with the \ac{cli}.
 Eventually, the developed bootstrap will be analyzed regarding economical aspects and possible weak points and a conclusion will be drawn.
