--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -101,7 +101,8 @@
 \include{Inhalt/04_Inhalt/0200_fundamentals}
 \include{Inhalt/04_Inhalt/0300_concept}
 \include{Inhalt/04_Inhalt/0400_implementation}
-\include{Inhalt/04_Inhalt/0500_future} % TODO: probably change number when more chapters arrive
+\include{Inhalt/04_Inhalt/0500_future}
+\include{Inhalt/04_Inhalt/0600_evaulation}
 
 % ---- Literaturverzeichnis
 \cleardoublepage
