--- a/Inhalt/04_Inhalt/0300_concept.tex
+++ b/Inhalt/04_Inhalt/0300_concept.tex
@@ -1,9 +1,11 @@
 \chapter{Conceptional Thoughts}
 \label{sec:concept}
+
+\section{Interaction with Services}
 Before implementing the bootstrap, one of the major questions is what way should be chosen for programmatically interacting with the services \ac{aws} and Vault.
 Both provide multiple possibilities.
 
-\section{\ac{aws}}
+\subsection{\ac{aws}}
 When it comes to \ac{aws}, there are three obvious ways that could be chosen.
 
 \paragraph{\acs{rest} \ac{api}}
@@ -57,7 +59,7 @@ Staying with the example of the changed \ac{api} and assuming that the \ac{sdk} 
 At the same time, you would be responsible to update a program utilizing the \acs{rest} \ac{api} entirely on your own.
 As, in this case, the \ac{sdk} is released and maintained by Amazon their selves, and because of the introduced simplicity of working with an \ac{sdk} rather than the \ac{api} directly, this variant will be used in the following.
 
-\section{Vault}
+\subsection{Vault}
 The aspects and options to consider for Vault are very similar to those for \ac{aws}.
 Vault also has an \ac{http} api, a \ac{cli} and an own Go \ac{sdk}.
 One noticeable difference here is that -- even though the \ac{sdk} is provided by the vendor itself -- the documentation for the \ac{sdk} is not good at all, especially in terms of login.
